--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Meu Blog</h1><p>Bem-vindo ao meu blog!</p></p></h1>
+<!DOCTYPE html><html><head><title>Meu Blog</title><link rel="stylesheet" href="style.css"></head><body><h1>Meu Blog</h1><p>Bem-vindo ao meu blog!</p></body></html></p></h1></body></title></head></html>
