--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<script src="form-validation.js"></script>
+<script src="smooth-scrolling.js"></script>
+<script src="image-carousel.js"></script>
+<script src="api-calls.js"></script><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +9,7 @@
     <title>Blog Profissional - Conteúdo de Qualidade</title>
     <meta name="description" content="Blog profissional com conteúdo de qualidade e design moderno">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Header -->
